crates/language-v2/tests/src/fail/p2_specifiers/version_redundant_from/test.stderr
error: 'From' with the first supported version '1.0.0' is equivalent to 'Always', and can be removed.
  --> src/fail/p2_specifiers/version_redundant_from/test.rs:18:80
   |
18 | ...                   field_1 = Optional(reference = Two, enabled = From("1.0.0")),
   |                                                                          ^^^^^^^
